@@ -2,6 +2,7 @@ dh-python (5.20211215) UNRELEASED; urgency=medium
 
   * Use a consistent distribution name regexp to handle dashed names
     correctly, thanks Nicolas Dandrimont.
+  * Un-constrain python_version constraints where the minimum version is < 3.
 
  -- Stefano Rivera <stefanor@debian.org>  Thu, 16 Dec 2021 11:44:12 -0400
 
